# hl-executor

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: constants.py  hl_executor.py
src/handlers/: constants.py  deposit.py  place_order.py  setup.py  status.py  withdraw.py
src/hl_executor/: __init__.py
src/hl_executor/handlers/: setup.py  status.py
src/hl_executor/utils/: cleanup.py
tests/: test_cloid_conversion.py  test_display_functions.py  test_helper_edge_cases.py  test_order_response_edge_cases.py  test_place_order_response_parsing.py  test_place_order_validations.py  test_setup_parse_cloid.py  test_setup_resolution.py  test_status_utils.py
