[project]
name = "hl-executor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "timbrinded", email = "79199034+timbrinded@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "hyperliquid-python-sdk>=0.18.0",
    "python-dotenv>=1.0.1",
    "eth-account>=0.10.0",
    "dotenv>=0.9.9",
    "rich>=14.1.0",
]

[project.scripts]
hlexec = "hl_executor:cli"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
