[project]
name = "hl-executor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "timbrinded", email = "79199034+timbrinded@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "hyperliquid-python-sdk>=0.18.0",
    "python-dotenv>=1.0.1",
    "eth-account>=0.10.0",
    "dotenv>=0.9.9",
    "rich>=14.1.0",
    "mypy>=1.17.1",
    "ruff>=0.12.11",
    "web3>=7.13.0",
    "pyrefly>=0.31.0",
]

[project.scripts]
hlexec = "hl_executor:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["hl_executor", "constants"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["handlers*"]


[[tool.mypy.overrides]]
module = [
  "hyperliquid",
  "hyperliquid.*",
  "eth_account",
  "eth_account.*",
  "web3",
  "web3.*",
  "dotenv",
  "rich",
  "rich.*",
]
ignore_missing_imports = true

[tool.pyrefly]
project-includes = ["src","tests"]
search-path = ["src", "tests"]
python-version = "3.10.0"
ignore-missing-imports = [
    "hyperliquid",
    "hyperliquid.*",
    "eth_account",
    "eth_account.*",
    "web3",
    "web3.*",
    "dotenv",
    "rich",
    "rich.*",
]
